update face register page

--- a/fe-app/tsconfig.json
+++ b/fe-app/tsconfig.json
@@ -3,10 +3,12 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "react-jsx",
-
+    "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": [
+        "src/*"
+      ]
     }
   }
 }
