--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -34,6 +34,12 @@ spring:
           writetimeout: 5000
         debug: true
 
+  servlet:
+    multipart:
+      max-file-size: 10MB        # Giới hạn dung lượng 1 file
+      max-request-size: 20MB     # Giới hạn dung lượng toàn request
+      file-size-threshold: 2KB   # Bắt đầu ghi ra disk nếu file vượt quá ngưỡng này
+
 application:
   security:
     jwt:
