--- a/be/Dockerfile
+++ b/be/Dockerfile
@@ -1,46 +1,29 @@
-# Multi-stage build để tối ưu kích thước image
-FROM maven:3.9.4-jdk-17 AS build
-
-# Set working directory
+# Build stage
+FROM maven:3.6.3-openjdk-17-slim AS build
 WORKDIR /app
-
-# Copy pom.xml và download dependencies (layer caching)
 COPY pom.xml .
 RUN mvn dependency:go-offline -B
-
-# Copy source code và build
 COPY src ./src
 RUN mvn clean package -DskipTests
 
 # Production stage
-FROM eclipse-temurin:17-jre
-
-# Cài đặt các package cần thiết
-RUN apt-get update && apt-get install -y \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Tạo user non-root để chạy app
-RUN groupadd -r spring && useradd -r -g spring spring
-
-# Set working directory
+FROM openjdk:17-jdk-slim
 WORKDIR /app
 
-# Copy JAR file từ build stage
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+RUN groupadd -r spring && useradd -r -g spring spring
+
 COPY --from=build /app/target/*.jar app.jar
 
-# Chown file cho spring user
 RUN chown spring:spring app.jar
 
-# Switch to non-root user
 USER spring
 
-# Expose port
 EXPOSE 8080
 
-# Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8080/actuator/health || exit 1
 
-# Run application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+CMD ["java", "-jar", "app.jar"]
+
