--- a/be/src/main/resources/application-docker.yml
+++ b/be/src/main/resources/application-docker.yml
@@ -9,14 +9,14 @@ spring:
     database: POSTGRESQL
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        "[format_sql]": true
+        format_sql: true
         jdbc:
-          "[time_zone]": UTC
+          time_zone: UTC
 
   servlet:
     multipart:
@@ -38,9 +38,9 @@ application:
 
 logging:
   level:
-    "[com.leduc.spring]": INFO
-    "[org.springframework.security]": DEBUG
-    "[org.hibernate.SQL]": DEBUG
+    com.leduc.spring: INFO
+    org.springframework.security: DEBUG
+    org.hibernate.SQL: DEBUG
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
   file:
