--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -15,17 +15,24 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "^53.0.20",
+    "expo-av": "^15.1.7",
     "expo-camera": "~16.1.11",
+    "expo-file-system": "^18.1.11",
+    "expo-gl": "~15.1.7",
+    "expo-gl-cpp": "^11.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
+    "face-api.js": "^0.20.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-unimodules": "^0.15.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
