--- a/be2/src/main/resources/application-docker.yml
+++ b/be2/src/main/resources/application-docker.yml
@@ -56,8 +56,8 @@ management:
       show-details: always
 
 aws:
-  region: ap-southeast-1   # Ví dụ: Singapore region gần Việt Nam
+  region: ap-southeast-2   # Ví dụ: Singapore region gần Việt Nam
   s3:
     mock: false            # false nếu muốn dùng thật trên AWS
     buckets:
-      student: smart-attendance-student
+      student: leducdev
