--- a/be2/src/main/resources/application-docker.yml
+++ b/be2/src/main/resources/application-docker.yml
@@ -9,7 +9,7 @@ spring:
     database: POSTGRESQL
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: false
     properties:
       hibernate:
