--- a/be2/src/main/resources/application-docker.yml
+++ b/be2/src/main/resources/application-docker.yml
@@ -56,8 +56,10 @@ management:
       show-details: always
 
 aws:
-  region: ap-southeast-2   # Ví dụ: Singapore region gần Việt Nam
+  region: ap-southeast-2
   s3:
-    mock: false            # false nếu muốn dùng thật trên AWS
+    mock: false
     buckets:
       student: leducdev
+  rekognition:
+    collection: students-faces
