--- a/be2/src/main/resources/application.yml
+++ b/be2/src/main/resources/application.yml
@@ -51,8 +51,10 @@ application:
 
 # ================= AWS S3 CONFIG =================
 aws:
-  region: ap-southeast-2   # Ví dụ: Singapore region gần Việt Nam
+  region: ap-southeast-2
   s3:
-    mock: false            # false nếu muốn dùng thật trên AWS
+    mock: false
     buckets:
       student: leducdev
+  rekognition:
+    collection: students-faces
