--- a/be2/pom.xml
+++ b/be2/pom.xml
@@ -22,6 +22,13 @@
 
     <!-- AWS SDK BOM -->
     <dependencyManagement>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-rekognition</artifactId>
+            <version>1.12.261</version>
+        </dependency>
+
         <dependencies>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
