--- a/be2/pom.xml
+++ b/be2/pom.xml
@@ -23,14 +23,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.amazonaws</groupId>
-                <artifactId>aws-java-sdk-rekognition</artifactId>
-                <version>1.12.261</version>
-            </dependency>
-            <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.20.26</version>
+                <version>2.20.26</version> <!-- Đảm bảo dùng phiên bản tương thích -->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -137,7 +132,6 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.4</version>
         </dependency>
-
 
         <!-- Springdoc OpenAPI -->
         <dependency>
