--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-community/art": "^1.1.2",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "autoprefixer": "^10.4.21",
