--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -2,9 +2,9 @@
   "name": "my-expo-app",
   "version": "1.0.0",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "start": "expo start --dev-client",
     "start:clear": "expo start --clear",
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
@@ -30,7 +30,7 @@
     "nativewind": "^4.1.23",
     "postcss": "^8.5.6",
     "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-camera": "^4.2.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
@@ -41,7 +41,8 @@
     "react-native-shadow-2": "^7.1.2",
     "react-native-svg": "15.11.2",
     "react-native-unimodules": "^0.15.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -55,6 +56,5 @@
     "tailwindcss": "^3.3.2",
     "typescript": "~5.8.3"
   },
-  "main": "node_modules/expo/AppEntry.js",
   "private": true
 }
