--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -41,7 +41,9 @@
     "react-native-shadow-2": "^7.1.2",
     "react-native-svg": "15.11.2",
     "react-native-unimodules": "^0.15.0",
-    "react-native-vector-icons": "^10.3.0"
+        "react-native-vector-icons": "^10.3.0",
+    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-picker/picker": "^2.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
