--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/art": "^1.1.2",
+    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "autoprefixer": "^10.4.21",
@@ -41,14 +43,13 @@
     "react-native-shadow-2": "^7.1.2",
     "react-native-svg": "15.11.2",
     "react-native-unimodules": "^0.15.0",
-        "react-native-vector-icons": "^10.3.0",
-    "@react-native-community/datetimepicker": "^7.6.1",
-    "@react-native-picker/picker": "^2.5.1"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^20.0.1",
     "@types/react": "~19.0.10",
+    "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.1",
     "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^10.1.2",
